tests/negative/UnusedOperatorDef.juvix
module UnusedOperatorDef;
  syntax fixity add := binary;
  syntax operator + add;
end ;
